--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Selamat Datang di Web Profil</div>
+        <div class="intro-lead-in">Selamat Datang</div>
         <div class="intro-heading text-uppercase">Desa Bojong</div>
         <a class="btn btn-warning btn-xl text-uppercase js-scroll-trigger" href="#about">Selengkapnya</a>
       </div>
