--- a/index.html
+++ b/index.html
@@ -166,23 +166,19 @@
           </div>
         </a>
       </div>
-
-    </div>
-  </div>
-</section>
-
-      <!-- Video 1 -->
+      <!-- berita  -->
       <div class="col-md-4 mb-4">
-  <div class="card h-100 video-card" data-toggle="modal" data-target="#modalIframe" data-url="https://www.youtube.com/embed/2pgeorWSSKI">
-    <img class="card-img-top" src="img/video-thumb-bojong.jpg" alt="Profil Desa Bojong">
-    <div class="card-body text-center">
-      <h5>Profil Desa Bojong</h5>
-      <p>Video profil resmi Desa Bojong, Kec. Wonosegoro, Boyolali – menampilkan potensi, budaya, dan kehidupan masyarakat desa.</p>
-    </div>
-  </div>
-</div>
-</div>
-    </div>
+        <a href="https://www.youtube.com/embed/2pgeorWSSKI" 
+           target="_blank" rel="noopener" class="text-decoration-none text-dark">
+          <div class="card h-100 shadow-sm">
+            <img src="img/video-thumb-bojong.jpg" class="card-img-top" alt="Vidio Profil Desa">
+            <div class="card-body">
+                    <p>Video profil resmi Desa Bojong, Kec. Wonosegoro, Boyolali – menampilkan potensi, budaya, dan kehidupan masyarakat desa.</p>
+              <p class="text-primary small">Sumber: YouTube kknt desa bojong udb surakarta</p>
+            </div>
+          </div>
+        </a>
+      </div>
   </div>
 </section>
 
@@ -243,6 +239,8 @@
         <img src="img/galeri/21.jpg" alt="Foto Kegiatan Desa">
         <img src="img/galeri/22.jpg" alt="Foto Kegiatan Desa">
         <img src="img/galeri/23.jpg" alt="Foto Kegiatan Desa">
+        <img src="img/galeri/24.jpg" alt="Foto Kegiatan Desa">
+        <img src="img/galeri/25.jpg" alt="Foto Kegiatan Desa">
       </div>
     </div>
   </div>
