Update index.html with content enhancements

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="container">
     <!-- Logo Desa Boyolali -->
     <a class="navbar-brand" href="#page-top">
-      <img src="img/logo.png" alt="Logo Boyolali" style="height: 40px; margin-right: 10px;">
+      <img src="img/logo.png" alt="Logo Boyolali" style="height: 60px; width: 60px; object-fit: contain; margin-right: 10px;">
       <span class="text-uppercase">Desa Bojong</span>
     </a>
     <!-- Tombol Toggle untuk tampilan mobile -->
@@ -93,8 +93,27 @@
           <div class="card-body text-center">
             <h5 class="card-title">Wilayah Desa</h5>
             <p class="text-justify">
-      Desa Bojong merupakan salah satu desa yang ada di Kecamatan Wonosegoro, Kabupaten Boyolali. Secara geografis, desa ini terletak pada koordinat <strong>7°16′9″S 110°41′19″E</strong>. Desa ini memiliki struktur wilayah yang mendukung kegiatan pertanian dan peternakan.
+      <strong>Desa Bojong</strong> merupakan salah satu desa yang terletak di wilayah administratif 
+          <strong>Kecamatan Wonosegoro, Kabupaten Boyolali, Provinsi Jawa Tengah</strong>. Secara geografis, 
+          Desa Bojong berada pada koordinat <strong>7°16′9″ Lintang Selatan</strong> dan <strong>110°41′19″ Bujur Timur</strong>, 
+          yang menempatkannya di kawasan dataran tinggi dengan kondisi alam yang relatif sejuk dan tanah yang subur.
     </p>
+    <p>
+          Wilayah Desa Bojong terdiri atas beberapa dukuh dan lingkungan pemukiman yang tersebar secara merata. 
+          Struktur wilayahnya didominasi oleh lahan pertanian, perkebunan rakyat, serta padang rumput yang digunakan 
+          untuk kegiatan peternakan. Selain itu, terdapat pula area pemukiman penduduk, fasilitas umum, dan lahan 
+          produktif lainnya yang mendukung kehidupan sosial dan ekonomi masyarakat.
+        </p>
+        <p>
+          Kondisi topografi yang bervariasi serta ketersediaan sumber daya alam yang memadai menjadikan Desa Bojong 
+          memiliki potensi besar dalam pengembangan sektor <strong>agribisnis</strong> dan <strong>peternakan</strong>. 
+          Dukungan infrastruktur desa, seperti jalan penghubung antar dusun, sistem irigasi sederhana, dan akses ke 
+          pasar tradisional, turut memperkuat aktivitas ekonomi masyarakat desa.
+        </p>
+        <p>
+          Dengan potensi wilayah yang dimiliki, Desa Bojong terus berkembang menjadi desa yang mandiri, produktif, 
+          dan berdaya saing dalam mendukung pembangunan daerah.
+        </p>
         </div>
       </div>
 
@@ -105,7 +124,9 @@
           <div class="card-body text-center">
             <h5 class="card-title">Potensi Desa</h5>
             <p class="card-text"><p class="text-justify">
-      Desa Bojong memiliki potensi utama di bidang <strong>pertanian</strong> dan <strong>peternakan</strong>. Tanah yang subur sangat mendukung budidaya tanaman seperti jagung dan singkong. Komoditas-komoditas ini ditanam menggunakan bibit unggul demi hasil panen yang maksimal. Selain itu, aktivitas peternakan juga turut berkembang seiring kebutuhan masyarakat dan dukungan lingkungan yang memadai.</p>
+<strong>Desa Bojong</strong> memiliki potensi utama di sektor pertanian dan peternakan. Kondisi tanah yang subur menjadikan desa ini sangat ideal untuk budidaya berbagai komoditas pertanian, khususnya <strong>jagung</strong> dan <strong>singkong</strong>. Kegiatan pertanian dilakukan dengan menggunakan bibit unggul guna mendukung peningkatan produktivitas serta kualitas hasil panen. Di sisi lain, sektor peternakan juga mengalami perkembangan yang cukup signifikan, seiring dengan meningkatnya kebutuhan masyarakat serta dukungan lingkungan yang mendukung pengembangan usaha ternak.
+Selain potensi di sektor pertanian dan peternakan, Desa Bojong juga memiliki kekuatan ekonomi lokal melalui sektor Usaha Mikro, Kecil, dan Menengah <strong>(UMKM)</strong>. Beberapa produk unggulan yang berkembang di masyarakat antara lain <strong>gethuk lindri</strong>, <strong>jamu bubuk tradisional</strong>, <strong>keripik tempe</strong>, dan <strong>peyek</strong>. Produk-produk ini tidak hanya menjadi sumber mata pencaharian warga, tetapi juga memiliki daya saing untuk dipasarkan secara lebih luas, baik di tingkat lokal maupun regional. Keberadaan UMKM ini turut memberikan kontribusi nyata terhadap pertumbuhan ekonomi desa dan menjadi salah satu pilar penggerak kesejahteraan masyarakat.
+</p>
           </div>
         </div>
       </div>
@@ -117,13 +138,18 @@
           <div class="card-body text-center">
             <h5 class="card-title">Visi & Misi</h5>
              <h4><strong>VISI:</strong></h4>
-    <p class="text-justify">
-      "Melayani masyarakat khususnya Desa Bojong dengan sebaik-baiknya."
-    </p>
+    <ol>
+      <li>"Terwujudnya Desa Bojong yang aman, nyaman, sejahtera, dan mandiri."</li>
+      <li>"Masyarakat Desa Bojong yang berdaya saing, berbudaya, dan berakhlak mulia."</li>
+      <li>"Desa Bojong yang maju dalam ekonomi, sosial, dan budaya."</li>
+    </ol>
     <h4><strong>MISI:</strong></h4>
     <ol>
-      <li>Memajukan desa dalam misi pembangunan.</li>
-      <li>Memakmurkan masyarakat Desa Bojong.</li>
+      <li>"Meningkatkan kualitas sumber daya manusia melalui pendidikan dan pelatihan."</li>
+      <li>"Meningkatkan perekonomian masyarakat melalui pengembangan potensi desa."</li>
+      <li>"Meningkatkan infrastruktur dan sarana prasarana desa yang memadai."</li>
+      <li>"Meningkatkan kualitas pelayanan publik yang profesional dan transparan."</li>
+      <li>"Melestarikan budaya dan kearifan lokal desa."</li>
     </ol>
         </div>
       </div>
